style.css
html {
  font-family: "Sora", Verdana, sans-serif;
  font-size: 16px;
  box-sizing: border-box;
}

body {
  display: flex;
  flex-direction: column;
  background-color: #FAFAF9;
  margin: 0;
  margin-top: 10.125rem;
}

img.icon {
  padding: 0;
}

main > h1 {
  font-size: 2.25rem;
  margin-bottom: 0.75rem;
}

main > p {
  font-size: 1.25rem;
  line-height: 2rem;
  margin-bottom: 2rem;
  color: #52525A;
}

ul.checkmarks {
  list-style-type: none;
  list-style-position: inside;
  margin: 0;
  padding: 0;
  padding-bottom: 1rem;
}

ul.checkmarks li {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 0.5rem;
  font-size: 0.875rem;
  margin-bottom: 0.75rem;
}

.testimonial {
  padding: 2.5rem 2rem;
  border-radius: 0.875rem;
  box-shadow: 0px 30px 100px 0px rgba(17, 23, 41, 0.05);
  background-color: #FFFFFF;
  margin-bottom: 2rem;
}

.testimonial > p {
  font-size: 1.15rem;
}

.testimonial-header {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  column-gap: 1rem;
  margin-bottom: 1rem;
}

.testimonial-header > img {
  width: 6rem;
  height: 2rem;
}

.testimonial-rating {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  column-gap: 0.25rem;
}

.testimonial-rating > img {
  width: 1.5rem;
  height: 1.5rem;
}

p.testimonial-author {
  margin-bottom: 0.5rem;
}

p.testimonial-text {
  color: #52525A;
  margin-bottom: 0;
}

/* Tablets and desktop */
@media screen and (min-width: 1024px) {
  body {
    margin: 0 6rem;
  }

  .testimonial {
    margin-bottom: 0;
  }
  
  aside {
    width: 50%;
    display: grid;
    gap: 2rem;
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: repeat(2, 1fr);
  }

  #testimonial-1 {
    grid-column: span 4 / span 4;
    grid-column-start: 3;
  }

  #testimonial-2 {
    grid-column: span 4 / span 4;
    grid-column-start: 1;
  }
}

/* Tablets only*/
@media screen and (min-width: 1024px) and (max-width: 1280px) {
  aside {
    margin: 0 auto;
  }
}

/* Desktop only */
@media screen and (min-width: 1280px) {
  body {
    display: flex;
    flex-direction: row;
    gap: 2rem;
  }

  main, aside {
    width: 50%;
  }
}

